--- a/pwa/public/index.html
+++ b/pwa/public/index.html
@@ -39,5 +39,31 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src='./secrets.js'> </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: window.apiKey,
+    authDomain: "chatastrophe-60f0c.firebaseapp.com",
+    projectId: "chatastrophe-60f0c",
+    storageBucket: "chatastrophe-60f0c.appspot.com",
+    messagingSenderId: window.messagingSenderId,
+    appId: "1:748920034679:web:02a15eb20fcd70f3b27d72",
+    measurementId: "G-B9EPEG26J5"
+  };
+  // Initialize Firebase
+  window.firebase = firebase;
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
   </body>
 </html>
