--- a/pwa/public/index.html
+++ b/pwa/public/index.html
@@ -47,7 +47,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
 
-<script>
+<!-- <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   var firebaseConfig = {
@@ -63,7 +63,7 @@
   window.firebase = firebase;
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
-</script>
+</script> -->
 
   </body>
 </html>
