--- a/pwa/public/index.html
+++ b/pwa/public/index.html
@@ -64,6 +64,6 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script> -->
-
+    <script src='../src/app.js'></script>
   </body>
 </html>
